Documentação Swagger Classe Emprestimo
